// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Puebas de archivo GifGrid Bebe de mostrar se correctamente el componente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Goku
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Puebas de archivo GifGrid Debe de moratrar la informacion que viene de useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Goku
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Algo papa"
      url="http://localhost/lago.png"
    />
  </div>
</Fragment>
`;
